[package]
name = "learn_rust"
version = "0.1.0"
authors = ["idir <idirall22@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ethereum-types = "0.9.2"
hex = "0.4"
rlp = "0.5.0"
secp256k1 = "0.20.2"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
forest_crypto = "0.5.2"
arrayref = "0.3.6"
web3 = "0.16.0"
ethereum-hexutil = { package = "ethereum-hexutil", version = "0.2.3" }
